--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ and open the template in the editor.
     <body>
         <h1>Demostraciones del uso de ckEditor</h1>
         <ul>
-            <li><a href="demo1.html">Demo 1</a></li>
+            <li><a href="demo1.html">Demo 1</a>: Configuraci&oacute;n definida al crear el editor</li>
+            <li><a href="demo2.html">Demo 2</a>: Configuraci&oacute;n usando un archivo externo</li>
         </ul>
     </body>
 </html>
